delete shoe method no more 404 error + search item method no more duplicating shoe model